--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   flutter_bloc:
   hydrated_bloc:
   path_provider:
+  firebase_core:
+  firebase_auth:
+  get_it:
+  dartz:
+  cloud_firestore: ^5.6.7  
 
 dev_dependencies:
   flutter_test:
