--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   firebase_auth:
   get_it:
   dartz:
-  cloud_firestore: ^5.6.7  
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
